Motor-gap fix — CPU F9/F10 acos matches kernel's accurateAcos (gap CONFIRMED + COLLAPSED)
MyoFilLink.alignUVecTorque/alignYVecTorque (lines 174, 202) now call
GPUMoveThing.accurateAcos instead of Pt3D.fastAcos — the same source
method the device kernel calls from F9/F10 and the joint kernels.
GPUMoveThing.accurateAcos widened from private static to package-private
static so MyoFilLink (same boxOfActin package) can reference it.

This was the decisive confirming test for the MOTOR_GAP_DIAGNOSIS finding:
F10 (yVec alignment, target 0°) sits inside the |dot|>0.95 band at
equilibrium, where Pt3D.fastAcos uses a small-angle approximation that is
~0.4% off in radians. GPUMoveThing.accurateAcos is Newton-refined to fp64
precision. The HeldBoundMotorDiag probe absorbed the divergence with a
1e-3 tolerance; the live ensemble did not.

Confirming ensemble (RUN_LOGS/2026-06-04_acos_confirm, N=8 paired
device-vs-freshCPU, glidingAssay500_val, both arms -gpu):

  observable        post-reorder baseline    post-swap (this fix)
  bindEvents        t = -4.10                t = -0.78
  meanBoundMotors   t = -3.49                t = -0.99
  glidingVelocity   t = -2.85                t = +0.28

Gap collapsed on all three observables, 8/8 same-sign pattern broke. The
acos formula divergence is the residual cause; the swap is the fix.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>